<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="private1_version" translatable="false">1347438995.05</string>
    <string name="private2_version" translatable="false">1347438995.05</string>
    <string name="private3_version" translatable="false">1347438995.05</string>
    <string name="private31_version" translatable="false">1347438791.05</string>
    <string name="private32_version" translatable="false">1347438791.05</string>
    <string name="private33_version" translatable="false">1347438791.05</string>
    <string name="public_version" translatable="false">12500</string>
    <string name="public3_version" translatable="false">1347438610.05</string>
    <string name="notebook3_version" translatable="false">20200206.1205</string>
    <string name="ipynb_version" translatable="false">20200207.1205</string>
    <string name="thanks_link" translatable="false">https://www.qpython.org/contributors.html</string>
    <string name="lower_project" translatable="false">projects</string>
    <string name="lib_manager">QPYPI</string>
    <string name="qpypi_up">QPYPI</string>
    <string name="colorvalue_letter_alpha" translatable="false">α</string>
    <string name="colorvalue_letter_red" translatable="false">R</string>
    <string name="colorvalue_letter_green" translatable="false">G</string>
    <string name="colorvalue_letter_blue" translatable="false">B</string>
    <string name="ui_feedback_mail" translatable="false">support@qpython.org</string>
    <string name="log" translatable="false">Log</string>
    <string name="v_version" translatable="false">v %s</string>
    <string name="web" translatable="false">Web</string>
    <string name="arvr" translatable="false">AR/VR</string>
    <string name="action_from_python_three" translatable="false">from_python_three</string>
    <string name="key_saver" translatable="false">saver</string>
    <string name="lib_cache_folder_name" translatable="false">.lib_cache</string>
    <string name="aipy" translatable="false">AIPy</string>
    <string name="slash_project_node" translatable="false">/projects</string>
    <string name="key_hide_noti" translatable="false">hide_noti</string>
    <string name="key_hide_push" translatable="false">hide_push</string>
    <string name="logo" translatable="false">logo</string>
    <string name="level" translatable="false">lv %s</string>
    <string name="color_red" translatable="false">#FFD2483D</string>
    <string name="color_light_gray" translatable="false">#FF595959</string>
    <string name="color_dark_gray" translatable="false">#FF4A4A4A</string>
    <string name="color_yellow" translatable="false">#FFECCD00</string>
    <string name="terminal">Terminal</string>
    <string name="recent">Recent</string>
    <string name="snippet">Snippet</string>
    <string name="script">Script</string>
    <string name="project">Project</string>
    <string name="setting">Setting</string>
    <string name="editor">Editor</string>
    <string name="community">Community</string>
    <string name="gist">Gist</string>
    <string name="more">More</string>
    <string name="qpypi">Featured</string>
    <string name="sl4a_server">SL4A Server</string>
    <string name="internal_space"><![CDATA[Permissions & Storage]]></string>
    <string name="ftp_server">FTP Server</string>
    <string name="user_agreement_text">1. In order to allow you to use the hardware features of your mobile phone for programming, QPython may apply for camera permission, microphone permission, read-write storage and other permissions;\n\n
        2. In order to allow you to use the geographical location of your mobile phone for programming, QPython may apply to you for location permission;\n\n
        3. In order to allow you to use the account information of your mobile phone for programming, QPython may apply for system device permission to collect device information and log information;\n\n
        4. We will strive to adopt various security technologies to protect your personal information. Without your consent, we will not obtain, share or provide your information from a third party;\n\n
        5. If you do not actively manage the above permissions in system settings - > Apps - > qpython permissions, QPython will not automatically use them.\n\n
    </string>
    <string name="user_aggreement_toast">Please read and accept the "Service Agreement" and "Privacy Policy"</string>
    <string name="url_user_agreement">https://www.qpython.org/agreement.html</string>
    <string name="url_user_private">https://www.qpython.org/privacy.html</string>
    <string name="url_course">https://edu.qpython.org/courses.html</string>
    <string name="user_agreement_bottom_split1">You can read the full </string>
    <string name="user_agreement_bottom_split2">&#60;&#60;service agreement&#62;&#62; </string>
    <string name="user_agreement_bottom_split3">and </string>
    <string name="user_agreement_bottom_split4">&#60;&#60;privacy policy&#62;&#62;</string>
    <string name="application_terminal">Terminal</string>
    <string name="preferences">Preference</string>
    <string name="new_window">Open new terminal</string>
    <string name="close_window">Close terminal</string>
    <string name="window_list">Terminal list</string>
    <string name="reset">Reset Terminal</string>
    <string name="send_email">Send mail to…</string>
    <string name="special_keys">Special keys</string>
    <string name="toggle_soft_keyboard">Open/Close soft keyboard</string>
    <string name="reset_toast_notification">The state at present will be reset.</string>
    <string name="enable_wakelock">Enable wakelock</string>
    <string name="disable_wakelock">Disable wakelock</string>
    <string name="enable_wifilock">Enable WIFI lock</string>
    <string name="disable_wifilock">Disable WIFI lock</string>
    <string name="edit_text">Edit text</string>
    <string name="select_text">Select text</string>
    <string name="copy_all">Copy all</string>
    <string name="send_control_key">Send control key</string>
    <string name="send_fn_key">Send Fn key</string>
    <string name="window_title">Terminal %1$d</string>
    <string name="process_exit_message">Session is over</string>
    <string name="screen_preferences">Screen</string>
    <string name="title_statusbar_preference">Status bar</string>
    <string name="summary_statusbar_preference">Show/Hide Status bar</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>
    <string name="title_actionbar_preference">Action Bar</string>
    <string name="summary_actionbar_preference">Choose Action bar\'s behavior(Android 3.0 and above)</string>
    <string name="dialog_title_actionbar_preference">Action bar\'s behavior</string>
    <string name="title_orientation_preference">Screen orientation</string>
    <string name="summary_orientation_preference">Choose screen orientation action</string>
    <string name="dialog_title_orientation_preference">screen orientation action</string>
    <string name="text_preferences">Text</string>
    <string name="title_utf8_by_default_preference">Default use UTF-8</string>
    <string name="summary_utf8_by_default_preference">Using UTF-8 as default</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="enable_root">Enable root</string>
    <string name="root_mode">Root mode</string>
    <string name="star_it">Rate it</string>
    <string name="disable_root">Disable</string>
    <string name="sl4a_running">SL4A server is running</string>
    <string name="sl4a_un_running">SL4A server is not running</string>
    <string name="qpy_description">QPython is a script engine running on android devices like phone or tablet.</string>
    <string name="title_settings">Settings </string>
    <string name="config_cat_display">Display(Please restart the editor after changing)</string>
    <string name="config_title_line_numbers">Show line numbers</string>
    <string name="config_title_word_wrap">Word wrap</string>
    <string name="config_title_font">Change text font</string>
    <string name="config_title_text_size">Text size</string>
    <string name="config_title_color_theme">Color theme</string>
    <string name="config_title_scroll_fling">Fling to scroll faster</string>
    <string name="config_gist_icon"></string>
    <string name="config_title_gist">Show Gist button</string>
    <string name="config_summary_line_numbers">Display the line number at the left of the page</string>
    <string name="config_summary_word_wrap">Lines will break in new lines if they are too wide for the screen</string>
    <string name="config_summary_scroll_fling">Uncheck if you have performance issues</string>
    <string name="ui_contact_title">Contact</string>
    <string name="ui_licence_title">Licence</string>
    <string name="ui_app_rating">"Rate this app \n Leave a feedback"</string>
    <string name="ui_feedback">"Please feel free to contact me for any feedback, feature request or bug report. "</string>
    <string name="ui_licence_content">"This software is provided 'as-is', without any express or implied warranty.  In no event will the author be held liable for any damages arising from the use of this software."</string>
    <string name="ui_art_licence_title">Artistic Licence</string>
    <string name="ui_art_licence_content">"All icons for this app were created and belong to the author of the app : QPython."</string>
    <string name="key_reset">reset_storage</string>
    <string name="key_ftp_state">running_state</string>
    <string name="key_username">username</string>
    <string name="key_ftp_pwd">password</string>
    <string name="key_port_num">portNum</string>
    <string name="key_show_pwd">show_password</string>
    <string name="key_root_dir">chrootDir</string>
    <string name="key_stay_awake">stayAwake</string>
    <string name="key_about">about</string>
    <string name="already_newest">Already newest</string>
    <string name="course">Courses</string>
    <string name="my_share">My Gists</string>
    <string name="log_out">Sign Out</string>
    <string name="nothing_here_yet">Nothing here yet. :(</string>
    <string name="log_noti">Log Notification</string>
    <string name="app_noti">App Notifications</string>
    <string name="my_space_empty">My Space (— / 100 files)</string>
    <string name="tools">Tools</string>
    <string name="last_log">Runtime log</string>
    <string name="get_last_log">Check last runtime log</string>
    <string name="switch_py3">Switch to Python 3</string>
    <string name="switch_py2">Reset to Python 2 Standard</string>
    <string name="py_inter">Choose Python Interpreter</string>
    <string name="notebook">QPyNotebook</string>
    <string name="notebook_service">QPyNotebook Service</string>
    <string name="notebook_explorer">Start QPyNotebook Service</string>
    <string name="notebook_explorer_bg_start">It will run when QPython starts</string>
    <string name="key_py3" translatable="false">switch_py3</string>
    <string name="key_py2" translatable="false">switch_py2</string>
    <string name="key_py_inter" translatable="false">py_inter</string>
    <string name="key_notebook_run" translatable="false">notebook_run</string>
    <string name="key_notebook_page" translatable="false">notebook_page</string>
    <string name="basics">Basics</string>
    <string name="other">Other</string>
    <string name="thank">Thanks</string>
    <string name="notebook_not_started">QPyNotebook is not started</string>
    <string name="funny">Funny</string>
    <string name="learn_course">Learn QPython with courses</string>
    <string name="get_help">Get support</string>
    <string name="get_support_from_community">Get support from community</string>
    <string name="key_root" translatable="false">root</string>
    <string name="key_sl4a" translatable="false">sl4a</string>
    <string name="ip_address">My IP Adress</string>
</resources>